[package]
name = "json5-parser"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Command line build example"
homepage = "https://github.com/ygg-lang/yggdrasil-rs"
repository = "https://github.com/ygg-lang/yggdrasil-template/tree/master/projects/build_by_cli"
documentation = "https://docs.rs/json5-parser"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
yggdrasil-rt = "0.0.16"
nyar-error = { version = "0.1.10", features = ["yggdrasil-rt"] }

[dev-dependencies]


[features]
default = []
